--- a/Final_Part.ipynb
+++ b/Final_Part.ipynb
@@ -20,22 +20,22 @@
     "from datetime import datetime\n",
     "\n",
     "# InfluxDB configuration\n",
-    "url = 'http://localhost:8880' \n",
-    "token = 'gqFHvV2iH1VjEXIODhTneELHj8BWrGOsXWRVR7ARDAYUzjo3KQ9vQSnitxehJAONRq4MRLEklv7h8R0V71-l1Q=='\n",
-    "org = 'PT SATU'\n",
-    "bucket = 'IoTData'\n",
+    "url = '' \n",
+    "token = '",
+    "org = ''\n",
+    "bucket = ''\n",
     "\n",
     "# MQTT configuration for receiving messages\n",
-    "receive_broker_address = '103.175.218.182'\n",
-    "receive_port = 1883  # Default MQTT port\n",
-    "receive_topic = \"/optmqtt/cycle/ESP32_Coba\"\n",
+    "receive_broker_address = ''\n",
+    "receive_port =   # Default MQTT port\n",
+    "receive_topic = \"\"\n",
     "client_id = f'python-mqtt-{random.randint(0, 1000)}'\n",
     "\n",
     "# MQTT configuration for sending messages\n",
     "send_broker_address = 'mqtt.thingsboard.cloud'\n",
     "send_port = 1883  # Default MQTT port\n",
-    "send_topic = \"v1/devices/me/attributes\"\n",
-    "acc_token = 'yR2psnIkjpXPP1tYY65P'\n",
+    "send_topic = \"\"\n",
+    "acc_token = ''\n",
     "send_password = ''\n",
     "\n",
     "# Referensi Data (Change here)\n",
